added stylesheet as different file

--- a/views/loader.ejs
+++ b/views/loader.ejs
@@ -1,98 +1,6 @@
-<style>
 
-.work{
-    display: flex;
-    margin: auto auto;
-    width: 50%;
-    height: auto;
-    padding: 5%;
-    align-items: center;
-    align-content: space-between;
-    flex-direction: column;
-    border-radius: 55;
-    box-sizing: border-box;
-        -moz-box-sizing: border-box;
-        -webkit-box-sizing: border-box;
-        border: 1px solid rgb(255, 255, 255);
-        border-radius: 1%;
-        background-color:lightblue;
-  box-shadow:20px 20px 50px 10px pink;
-}
+<link rel="stylesheet" href="style.css">
 
-
-p{
-
-  border-bottom: 1px solid rgb(240, 245, 245);
-  width: 40rem;
-  column-gap: 4rem;
-  font-size: larger;
-  text-align: left;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-
-
-}
-.task{
-
-    background: transparent;
-    border: none;    
-    border-bottom: 1px solid rgb(2, 2, 2);
-}::placeholder{
-    color: rgba(248, 248, 252, 0.545);
-}
-
-.button{
-
-  background-color: lightblue;
-  border: 1px solid burlywood;
-  width: 7rem;
-  height: 1.5rem;
-  border: 0px solid blue;
-  text-align: center;
-  display: inline-block;
-  border-radius: 0%;
-
-
-  transition-duration: 0.4s;
-}
-.button:hover{
-    background-color: #4CAF50; /* Green */
-  color: white;
-}
-
-.new{
-
-  text-align: center;
-  border: 1px,solid,blue;
-  margin-left: 5rem;
-  width: 50rem;
-
-}
-
-@media (max-width: 1400px) {
-  
-.work{
-    display: flex;
-    margin: auto auto;
-    width: 80%;
-    height: 100%;
-    height: auto;
-    padding: 5%;
-    align-items: center;
-    align-content: space-between;
-    flex-direction: column;
-    border-radius: 55;
-    box-sizing: border-box;
-        -moz-box-sizing: border-box;
-        -webkit-box-sizing: border-box;
-        border: 2px solid rgb(255, 255, 255);
-        background-color:rgba(172, 214, 228, 0.673);
-  box-shadow:20px 20px 50px 10px pink;
-}
-}
-
-
-
-</style>
 <div class="work" style="background-color: rgb(99, 157, 207);;">
     <h1 style="text-align: center; width: 125%;color :#1f4d80" >YOUR todo List</h1>
 <% for(var i=0;i<data.length;i++){ %>
