--- a/views/loader.ejs
+++ b/views/loader.ejs
@@ -1,27 +1,27 @@
-
 <link rel="stylesheet" href="style.css">
+<link rel="icon" href="favicon.png" type="image/x-icon">
 
 
 <div class="work" style="background-color: rgb(99, 157, 207);">
     <h1 class="head">YOUR TO-DO list</h1><br>
-<% for(var i=0;i<data.length;i++){ %>
-<div class="up-de" >
-  
-    <form action="/update/<%= data[i]._id %>" method="POST" class="update">
-       
-        <input type="text" class="forms" name="editText" value="<%= i+1 %>  <%= data[i].messege %>">
-       
-        <input type="submit" value="Edit" class="ed-btn" >
-    </form>
+    <% for(var i=0;i<data.length;i++){ %>
+        <div class="up-de">
 
-    <form action="/delete/<%= data[i]._id %>" method="POST" class="delete" >
-        <input type="submit" value="delete" class="delete-btn">
-    </form>
-</div>
-<% } %>
+            <form action="/update/<%= data[i]._id %>" method="POST" class="update">
 
-<form action="/upload" method="POST" class="new" >
-   <input type="text" class="task" name="work" placeholder="Your task" required >
-   <input type="submit" value="add a task" class="button" ></input>
-</form>
+                <input type="text" class="forms" name="editText" value="<%= i+1 %>.  <%= data[i].messege %>">
+
+                <input type="submit" value="Edit" class="ed-btn">
+            </form>
+
+            <form action="/delete/<%= data[i]._id %>" method="POST" class="delete">
+                <input type="submit" value="delete" class="delete-btn">
+            </form>
+        </div>
+        <% } %>
+
+            <form action="/upload" method="POST" class="new">
+                <input type="text" class="task" name="work" placeholder="Your task" required>
+                <input type="submit" value="add a task" class="button"></input>
+            </form>
 </div>
